--- a/src/app/presentationals/header/header.component.scss
+++ b/src/app/presentationals/header/header.component.scss
@@ -4,10 +4,14 @@
   height: 100%;
   background-color: var(--surface-ground);
   align-items: center;
+  gap: 20px;
 
-  img {
-    margin-left: 17px;
+  .icon, .logo {
     height: 70px;
     width: auto;
+  }
+
+  .icon {
+    margin-left: 17px;
   }
 }
