feat: added pokemon list

--- a/src/app/presentationals/header/header.component.html
+++ b/src/app/presentationals/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
   <img class="icon" ngSrc="assets/icon.jpg" width="192" height="192" alt="Logo" />
-  <img class="logo" ngSrc="assets/logo.png" width="3840" height="2160" alt="Logo" />
+  <img class="logo" ngSrc="assets/logo.png" width="3840" height="2160" alt="Logo" priority />
 </div>
