--- a/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
+++ b/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
@@ -1,1 +1,5 @@
-<p>pokedex works!</p>
+<div class="pokemon-list-container">
+  @for (pokemon of pokemons(); track pokemon.id) {
+    <pkdx-pokemon [pokemon]="pokemon" />
+  }
+</div>
