feat: added infinite scroll to pokemon list

--- a/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
+++ b/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
@@ -1,4 +1,4 @@
-<div class="pokemon-list-container">
+<div class="pokemon-list-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" [scrollWindow]="false" (scrolled)="loadMore()">
   @for (pokemon of pokemons(); track pokemon.id) {
     <pkdx-pokemon [pokemon]="pokemon" />
   }
