feat: added detail page

--- a/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
+++ b/modules/features/pokedex/src/lib/containers/pokedex/pokedex.component.html
@@ -1,5 +1,5 @@
 <div class="pokemon-list-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" [scrollWindow]="false" (scrolled)="loadMore()">
   @for (pokemon of pokemons(); track pokemon.id) {
-    <pkdx-pokemon [pokemon]="pokemon" />
+    <pkdx-pokemon (click)="navigateToDetail(pokemon.id)" [pokemon]="pokemon" />
   }
 </div>
